--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200&display=swap');
 
+
 colores{
   color: #F2F2F2;  
   color: #E6E6E6;
@@ -310,3 +311,239 @@ header{
   .contactos-icon i:hover{
     color:#737373 ;
   }
+
+
+
+    /*  Mobile Start Here  */
+
+@media screen and (max-width: 500px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        width: 500px;
+        font-family: 'Raleway', sans-serif;
+
+
+    }
+
+    header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 500px;
+        background-color: #E6E6E6;
+        position: relative;
+
+
+
+    }
+    .container-header{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .logo {
+        color: #0D0D0D;
+    }
+
+    .menu ul{
+        display: flex;
+        align-items: center;
+    }
+
+    .menu ul li{
+        list-style: none;
+        margin-left: 35px;
+    }
+
+    .menu ul li a{
+        text-decoration: none;
+        color: #0D0D0D;
+        letter-spacing: 1px;
+        position: relative;
+        font-size: 7px;
+        font-weight: bold;
+
+    }
+
+    .menu ul li a::after{
+        content:'';
+        display: block;
+        position: absolute;
+        width: 0%;
+        height: 3px;
+        background-color: #404040;
+        bottom: -10px;
+        left: 0;
+        transition: 0.5s;
+    }
+
+    .menu ul li a:hover::after{
+        width: 100%;
+    }
+
+     /* Home Start Here  */
+
+    .inicio {
+        height: 90vh;
+        width: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #F2F2F2 ;
+        position: relative;
+        padding: 0;
+    }
+
+    .texto-inicio {
+
+        color: #0D0D0D;
+        position: relative;
+
+
+    }
+
+    .texto-inicio h2{
+        letter-spacing: 1.4px;
+        line-height: 1;
+        margin-bottom: 10px;
+    }
+
+    .texto-inicio h2 .nombre {
+        font-size: 90px;
+        color: #0D0D0D;
+        font-weight: 100;
+        width: 100%;
+    }
+
+    .texto-inicio h2 .tipeado {
+        font-size: 15px;
+        color: #0D0D0D;
+        font-weight: bold;
+        padding: 17px;
+    }
+
+
+    }
+
+
+    @media screen and (max-width: 1000px) and (min-width: 501px) {
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+    
+        body {
+
+            font-family: 'Raleway', sans-serif;
+    
+    
+        }
+    
+        header{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            background-color: #E6E6E6;
+            position: relative;
+    
+    
+    
+        }
+        .container-header{
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+    
+        .logo {
+            color: #0D0D0D;
+        }
+    
+        .menu ul{
+            display: flex;
+            align-items: center;
+        }
+    
+        .menu ul li{
+            list-style: none;
+            margin-left: 35px;
+        }
+    
+        .menu ul li a{
+            text-decoration: none;
+            color: #0D0D0D;
+            letter-spacing: 1px;
+            position: relative;
+            font-size: 11px;
+            font-weight: bold;
+    
+        }
+    
+        .menu ul li a::after{
+            content:'';
+            display: block;
+            position: absolute;
+            width: 0%;
+            height: 3px;
+            background-color: #404040;
+            bottom: -10px;
+            left: 0;
+            transition: 0.5s;
+        }
+    
+        .menu ul li a:hover::after{
+            width: 100%;
+        }
+    
+         /* Home Start Here  */
+    
+        .inicio {
+            height: 90vh;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #F2F2F2 ;
+            position: relative;
+            padding: 0;
+        }
+    
+        .texto-inicio {
+    
+            color: #0D0D0D;
+            position: relative;
+    
+    
+        }
+    
+        .texto-inicio h2{
+            letter-spacing: 1.4px;
+            line-height: 1;
+            margin-bottom: 10px;
+        }
+    
+        .texto-inicio h2 .nombre {
+            font-size: 120px;
+            color: #0D0D0D;
+            font-weight: 100;
+            width: 100%;
+        }
+    
+        .texto-inicio h2 .tipeado {
+            font-size: 15px;
+            color: #0D0D0D;
+            font-weight: bold;
+            padding: 17px;
+        }
+    
+    
+        }
+
