--- a/style/style.css
+++ b/style/style.css
@@ -17,12 +17,21 @@ colores{
 }
 
 body {
-
     font-family: 'Raleway', sans-serif;
-
+    transition: background-color .3s ease, color .3s ease;
 
 }
+:root{
+    --bg: #F2F2F2;
+    --bg-2: #E6E6E6;
+    --main-color: #0D0D0D; 
+}
+.dark:root {
+    --bg: #0D0D0D;
+    --bg-2: #0D0D0D;
+    --main-color: #F2F2F2;
 
+}
 
  /* Menu Start Here  */
 
@@ -31,7 +40,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 18px 30px;
-    background-color: #E6E6E6;
+    background-color: var(--bg-2);
     position: relative;
 
 
@@ -44,7 +53,7 @@ header{
 }
 
 .logo {
-    color: #0D0D0D;
+    color: var(--main-color);
 }
 
 .menu ul{
@@ -59,7 +68,7 @@ header{
 
 .menu ul li a{
     text-decoration: none;
-    color: #0D0D0D;
+    color: var(--main-color);
     letter-spacing: 1px;
     position: relative;
     font-size: 10px;
@@ -73,7 +82,7 @@ header{
     position: absolute;
     width: 0%;
     height: 3px;
-    background-color: #404040;
+    background-color: var(--main-color);
     bottom: -10px;
     left: 0;
     transition: 0.5s;
@@ -83,28 +92,59 @@ header{
     width: 100%;
 }
 
-.menu ul i{
+/* .menu ul i{
     text-decoration: none;
-    color: #0D0D0D;
+    color: var(--main-color);
     letter-spacing: 1px;
     position: relative;
     font-size: 20px;
     font-weight: bold;
 
-}
+} */
 
-.switch {
+.switch-btn{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
     cursor: pointer;
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    margin-left: 15px;
+    background: var(--bg-2);
 }
 
-.switch:active {
+.dark .switch-btn{
+    background: var(--bg);
+}
+
+.icon{
+    position: absolute;
+    color: var(--main-color);
+    font-size: 40px;
+}
+
+.dark-icon {
+    opacity: 0;
+    color:var(--main-color);
 
 }
+
+.dark .dark-icon {
+    opacity: 1;
+
+}
+
+.light-icon{
+    opacity: 1;
+
+}
+
+.dark .light-icon{
+    opacity: 0;
+
+}
+
 
  /* Home Start Here  */
 
@@ -114,7 +154,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #F2F2F2 ;
+    background-color: var(--bg) ;
     position: relative;
 }
 
@@ -124,7 +164,7 @@ header{
 .texto-inicio {
     padding-left: 50px;
     padding-right: 50px;
-    color: #0D0D0D;
+    color: var(--main-color);
     position: relative;
 
 
@@ -138,14 +178,14 @@ header{
 
 .texto-inicio h2 .nombre {
     font-size: 230px;
-    color: #0D0D0D;
+    color: var(--main-color);
     font-weight: 100;
     width: 100%;
 }
 
 .texto-inicio h2 .tipeado {
     font-size: 15px;
-    color: #0D0D0D;
+    color: var(--main-color);
     font-weight: bold;
     padding: 17px;
 }
@@ -178,6 +218,7 @@ header{
 .footer-icon{
     padding-left: 17px;
     padding-top: 20px;
+    color: var(--main-color);
 }
 
 .footer-icon i{
@@ -198,7 +239,7 @@ header{
     height: 100vh;
     position: relative;
     display: flex;
-    background-color: #F2F2F2;
+    background-color: var(--bg);
 
  }
 
@@ -209,7 +250,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #E6E6E6;
+    background-color: var(--bg-2);
 }
 
 .caja-texto{
@@ -227,7 +268,8 @@ header{
     font-size: 15px;
     font-weight: bold;
     display: flex;
-    align-items: start  ;
+    align-items: start;
+    color: var(--main-color);
 }
 
 .caja-texto h3 {
@@ -237,6 +279,7 @@ header{
     align-items: start  ;
     letter-spacing: 1.4px;
     line-height: 1.4;
+    color: var(--main-color);
 
 }
 
@@ -252,6 +295,7 @@ header{
 
 .caja-texto2 .icon {
     font-size: 30px;
+    color: var(--main-color);
 }
 
  /*  Proyect Start Here  */
@@ -259,20 +303,25 @@ header{
  #proyectos{
     display: flex;
     height: 100vh;
-    background-color: #F2F2F2;
+    background-color: var(--bg);
     justify-content: space-around;
  }
 
  #proyectos .proyecto-1 {
-    color: #E6E6E6;
+    color: var(--main-color);
     margin-top: 300px;
     background: #404040;
     height: 300px;
     width: 300px;
+ } 
+
+ #proyectos .ejemplo1 img{
+    width: 300px;
+    height: 270px;
  }
 
  #proyectos .proyecto-2 {
-    color: #E6E6E6;
+    color: var(--main-color);
     margin-top: 300px;
     background: #404040;
     height: 300px;
@@ -280,7 +329,7 @@ header{
  }
 
  #proyectos .proyecto-3 {
-    color: #E6E6E6;
+    color: var(--main-color);
     margin-top: 300px;
     background: #404040;
     height: 300px;
@@ -295,7 +344,7 @@ header{
     display: flex;
     position: relative;
     align-items: center;
-    background-color: #F2F2F2;
+    background-color: var(--bg);
   }
 
   .contacto {
@@ -306,7 +355,7 @@ header{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #E6E6E6;
+    background-color: var(--bg-2);
   }
 
   .datos {
@@ -318,6 +367,7 @@ header{
     align-items: center;
     font-size: 14px;
     font-weight: bold;
+    color: var(--main-color);
   }
 
   .contactos-icon{
@@ -326,6 +376,7 @@ header{
     justify-content: space-around;
     width: 300px;
     font-size: 30px;
+    color: var(--main-color);
 
   }
 
@@ -361,7 +412,7 @@ header{
         justify-content: space-between;
         align-items: center;
         width: 500px;
-        background-color: #E6E6E6;
+        background-color: var(--bg);
         position: relative;
 
 
@@ -476,8 +527,7 @@ header{
             display: flex;
             justify-content: space-between;
             align-items: center;
-
-            background-color: #E6E6E6;
+            background-color: var(--bg-2);
             position: relative;
     
     
@@ -490,7 +540,7 @@ header{
         }
     
         .logo {
-            color: #0D0D0D;
+            color: var(--main-color);
         }
     
         .menu ul{
@@ -505,7 +555,7 @@ header{
     
         .menu ul li a{
             text-decoration: none;
-            color: #0D0D0D;
+            color: var(--main-color);
             letter-spacing: 1px;
             position: relative;
             font-size: 11px;
@@ -519,7 +569,7 @@ header{
             position: absolute;
             width: 0%;
             height: 3px;
-            background-color: #404040;
+            background-color: var(--main-color);
             bottom: -10px;
             left: 0;
             transition: 0.5s;
@@ -533,18 +583,17 @@ header{
     
         .inicio {
             height: 90vh;
-
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #F2F2F2 ;
+            background-color: var(--bg) ;
             position: relative;
             padding: 0;
         }
     
         .texto-inicio {
     
-            color: #0D0D0D;
+            color: var(--main-color);
             position: relative;
     
     
@@ -558,14 +607,14 @@ header{
     
         .texto-inicio h2 .nombre {
             font-size: 120px;
-            color: #0D0D0D;
+            color: var(--main-color);
             font-weight: 100;
             width: 100%;
         }
     
         .texto-inicio h2 .tipeado {
             font-size: 15px;
-            color: #0D0D0D;
+            color: var(--main-color);
             font-weight: bold;
             padding: 17px;
         }
