--- a/style/style.css
+++ b/style/style.css
@@ -18,17 +18,17 @@ colores{
 
 body {
     font-family: 'Raleway', sans-serif;
-    transition: background-color .3s ease, color .3s ease;
+    transition: background-color .5s ease, color .5s ease;
 
 }
 :root{
     --bg: #F2F2F2;
     --bg-2: #E6E6E6;
-    --main-color: #0D0D0D; 
+    --main-color: #1F1F1F; 
 }
 .dark:root {
-    --bg: #0D0D0D;
-    --bg-2: #0D0D0D;
+    --bg: #1F1F1F;
+    --bg-2: #1F1F1F;
     --main-color: #F2F2F2;
 
 }
